z-index header correction

--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -37,6 +37,7 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 	position: fixed;
 	left: 0;
 	top: 0;
+	z-index: 100;
 }
 
 
